# sp-exam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
docs/: main.tex
include/: Algorithm.hpp  Logger.hpp  Models.hpp  Observer.hpp  Reactant.hpp  Reaction.hpp  ReactionBuilder.hpp  SimulationBatch.hpp  Simulator.hpp  Test.hpp  Utils.hpp  Vessel.hpp
scripts/: latex-code.sh
src/: benchmark.cpp  example.cpp  hospitalized.cpp  hospitalized_v2.cpp  main.cpp  observer.cpp
src/tests/: test_reactant.cpp  test_reaction.cpp  test_utils.cpp  test_vessel.cpp
